# ChangeLog for dev-cpp/mm-common
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/mm-common/ChangeLog,v 1.26 2014/04/23 21:08:07 pacho Exp $

  23 Apr 2014; Pacho Ramos <pacho@gentoo.org> -mm-common-0.9.5.ebuild:
  Drop old

  09 Apr 2013; Agostino Sarubbo <ago@gentoo.org> mm-common-0.9.6.ebuild:
  Stable for sh, wrt bug #458984

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> mm-common-0.9.6.ebuild:
  Stable for sparc, wrt bug #458984

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> mm-common-0.9.6.ebuild:
  Stable for alpha, wrt bug #458984

  29 Mar 2013; Agostino Sarubbo <ago@gentoo.org> mm-common-0.9.6.ebuild:
  Stable for ia64, wrt bug #458984

  28 Mar 2013; Agostino Sarubbo <ago@gentoo.org> mm-common-0.9.6.ebuild:
  Stable for arm, wrt bug #458984

  27 Mar 2013; Agostino Sarubbo <ago@gentoo.org> mm-common-0.9.6.ebuild:
  Stable for ppc64, wrt bug #458984

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> mm-common-0.9.6.ebuild:
  Stable for ppc, wrt bug #458984

  26 Mar 2013; Jeroen Roovers <jer@gentoo.org> mm-common-0.9.6.ebuild:
  Stable for HPPA (bug #458984).

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> mm-common-0.9.6.ebuild:
  Stable for x86, wrt bug #458984

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> mm-common-0.9.6.ebuild:
  Stable for amd64, wrt bug #458984

*mm-common-0.9.6 (20 Oct 2012)

  20 Oct 2012; Pacho Ramos <pacho@gentoo.org> +mm-common-0.9.6.ebuild:
  Version bump.

  16 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org> mm-common-0.9.5.ebuild:
  ppc/ppc64 stable wrt #385699

  04 Oct 2011; Jeroen Roovers <jer@gentoo.org> mm-common-0.9.5.ebuild:
  Stable for HPPA (bug #372353).

  25 Sep 2011; Raúl Porcel <armin76@gentoo.org> mm-common-0.9.5.ebuild:
  alpha/ia64/sh/sparc stable wrt #372353

  19 Jul 2011; Pacho Ramos <pacho@gentoo.org> -mm-common-0.8.ebuild,
  -mm-common-0.9.4.ebuild, mm-common-0.9.5.ebuild: