@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST mm-common-0.9.6.tar.xz 569264 SHA256 7c37158a1f37604705a9b9305d3b335fb8256f5de701c8801269dde4e2ce7dde SHA512 737196c32d4e9780b79281dc8a51ba8212f382e18fee18eac27788fb8bf3be10e849c0b541210c2252ed6e8e50176b97debcc28d57d7958d24a7c8cccaee9847 WHIRLPOOL 33494d88797c4bd76293f8891bec5cd10643cd21698047cbad42ff4f3457395e8a2d49af1023e1519c1e17ab420b4d062a1ea9eeb9eb77b908edcbd235313cc0
+DIST mm-common-0.9.7.tar.xz 262420 SHA256 78f47336f3bdf034a384c59a39cc9f0d566e69e36aa7c9ee3ec0bb6a94bf8b3e SHA512 5cd0efa76a3659dca9abd85990a1f227f7360e42b10c9215eccb460a02f9bff0858d249407c7de6f5d1b5ac452d6ccf88101be8827f23f3c04500feb7d7d2559 WHIRLPOOL 265066803e860bacfa921b1944b51bf97f1e795f065649662593cdf7321cbe5971594c4b6b9d5189ffde975a079311a7b81a59c8323e14da49205063002e784e
 EBUILD mm-common-0.9.6.ebuild 485 SHA256 8f23bbb8fa2754f79bc4d03b6b66836682f067806c426b2cafdfe6cd7b241068 SHA512 3a9ced374e7e18ff6835be39f4097b83a7f0be434f5a0f303a0ab0b9a76767c916ae06dd8b3e88c3a69043d96278eab3d12aa46175549d714d985836f44c8ce9 WHIRLPOOL b2239dac15a7ab61935953e60afb717d2a648e86ed77340737275a00693b570ef21078b83df5151f4b60eb2b478c5b93e210b91f612fe3af9b900dffd3c4a09c
-MISC ChangeLog 3320 SHA256 d9ebb5d718bdef423f4dd892f77e2b45b2fb9e334ce2ebbbc4899c2e4c0ebfe0 SHA512 8bd041ef3084ebdf9a2ea9e8066934ce2cd575f0b2186d01595052b543951d99522afaa768a27c5e7d5959ab31706367f217acfe367146d931882c052b390505 WHIRLPOOL 5c2525d72e924612a8c473e30c87b850faf90fbc5d813bf27251f7d7fdbb9d82bce3a47dcb73f0759bee3ef7c6114fef6e0ae23e035872a765d4836baca617c6
+EBUILD mm-common-0.9.7.ebuild 496 SHA256 50ab124cc8cfa9e12cc9ceb5f8e1db72d2cb8be705c263a1bb012d647c48a7b4 SHA512 7ab84fab8590ebc0464ea8f6412db24ca1ec59187c78b66a6a66a773d72d4ffffed75b435c2df3f65035e69512c1d01c74cf6215e613961e22297d4660047cc7 WHIRLPOOL c558ad4510f9fcfba4e338c9a35532e8a328a08a041c31181011e6ed61a2dd3964a460cbf24518ec6cb8ad86037561ef200be1879500d3f4239a5adde721a946
+MISC ChangeLog 3439 SHA256 d18a70c05cdedf036012472d1ca2be7162ae7da752f28488e0d920e56bf59054 SHA512 6cd53e4f9bb55747b1379cd1bb9fce92c1a2a1e2eaf9f27b07dca1025b392411b8b3d2f64b52ea35322d0c50b8e05be26160b698b2a9101075f922335eb8dbb0 WHIRLPOOL a64d4c1e1c2d30f614e92e19aa835a0f0c48295b4987910b061af9b0826f8c5c47f78c931060de988ee060c668111483f9cc4cd01e0c678c20081061970dabe3
 MISC metadata.xml 162 SHA256 67ddef49cc30a5e3ba508122f16893cbbb91804f971f5a97c7886417ab41e009 SHA512 0311fee1a3ba266cefd4422872468ccc22f1d85d4996f0ffea6da97d433bbb06aab4cebe7474b7983bb6ad959bcaf449526f8528892ec62e4b19b7e76d659de4 WHIRLPOOL a0a26f31fe4107c25ed0ee1ffcd342fbdc40c7a7188693baa20a9a069b80f409b1db7d4af319421116250d4a3ba18e5ef7862e18561ce36c3e3312270022a3d4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlNYK7gACgkQCaWpQKGI+9RKWwCfZfC3maQkLPIPEUFCL24XoB7h
-UOkAn371UQWvIDMsfVudZKe9f0Dln2B3
-=L4XG
+iEYEAREIAAYFAlQtP1QACgkQCaWpQKGI+9Sk4ACeKnLFXxLZIiHoV8dT8H7RHrNM
+noAAnRwT2Cma8tmcoDOJNOvysdi4ZD7m
+=Eay9
 -----END PGP SIGNATURE-----
