@@ -1,6 +1,11 @@
 # ChangeLog for dev-cpp/mm-common
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/mm-common/ChangeLog,v 1.26 2014/04/23 21:08:07 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/mm-common/ChangeLog,v 1.27 2014/10/02 12:04:35 pacho Exp $
+
+*mm-common-0.9.7 (02 Oct 2014)
+
+  02 Oct 2014; Pacho Ramos <pacho@gentoo.org> +mm-common-0.9.7.ebuild:
+  Version bump
 
   23 Apr 2014; Pacho Ramos <pacho@gentoo.org> -mm-common-0.9.5.ebuild:
   Drop old
